--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^3.0.2",
     "handlebars": "^4.1.2",
     "mongoose": "^5.5.1",
+    "nodemailer": "^6.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
